=== 0.4.0

* Feature: Display object's associations.

=== 0.3.5

* Requires active-fedora 6.1.

=== 0.3.4

* Moved FcrepoAdmin::BlacklightHelperBehavior to FcrepoAdmin::Helpers::BlacklightHelperBehavior.
* FcrepoAdmin::ObjectsHelper methods can now be easily overridden.
* DatastreamsHelper module added.
* Shared helper methods in new module FcrepoAdmin::Helpers::FcrepoAdminHelperBehavior.
* Objects and datastreams controller behaviors are now easily overrideable.
* Refactored object and datastream context navs for greater reusability.

=== 0.3.3

* Audit trail functionality fails gracefully (i.e., if object does not implement ActiveFedora::Auditable)

=== 0.3.2

* Separated datastream and object context navigation menus.
* Added object helpers.

=== 0.3.1

* Object and datastream context nav menus added.
* Audit trail moved into objects controller.

== 0.3.0

* Feature: Permissions and inherited permissions added to object show view.

== 0.2.0

* Feature: Datastream content editing.

== 0.1.0

Initial release to RubyGems.
