@@ -38,6 +38,19 @@ See https://github.com/projecthydra/hydra-head/wiki/Installation-Prerequisites.
   You may replace <code>'/admin'</code> with any mount point (except perhaps <code>'/catalog'</code>), 
   including <code>'/'</code>. All routes include <code>objects</code> as a subpath.
 
+* Add CanCan action aliases
+
+  In your Ability class (app/models/ability.rb) include the FcrepoAdmin::Ability module, for example:
+
+    class Ability
+	  include Hydra::Ability
+	  include Hydra::PolicyAwareAbility
+	  include FcrepoAdmin::Ability
+    end
+
+  FcrepoAdmin::Ability defines action aliases for permissions which are enforced on (ActiveFedora::Base) objects.
+  If your application defines action aliases, please check FcrepoAdmin::Ability for conflicts as aliases are global.
+
 * Add Javascript
   
   In app/assets/javascripts/application.js add this line: 
@@ -61,6 +74,8 @@ See https://github.com/projecthydra/hydra-head/wiki/Installation-Prerequisites.
     include ActiveFedora::Auditable
 
 === Overriding fcrepo_admin behaviors
+
+The following are examples of possible customizations.  This list is not necessarily exhaustive.
 
 * Object views
 
