@@ -1,0 +1,1 @@
+<%= render :partial => 'fcrepo_admin/objects/associations', :locals => {:object => @object} %>
