@@ -1,4 +1,1 @@
-<h1><%= @object.pid %></h1>
-
-<h3><%= t("fcrepo_admin.datastreams.title") %></h3>
-<%= render :partial => 'datastreams', :locals => {:datastreams => @object.datastreams} %>
+<%= render :partial => 'fcrepo_admin/objects/datastreams', :locals => {:object => @object} %>
