@@ -1,3 +1,4 @@
+<h3><%= t("fcrepo_admin.datastream.title") %>: <%= @datastream.dsid %></h3>
 <div class="tabbable">
   <ul class="nav nav-tabs">
     <li class="active"><a href="#tab1" data-toggle="tab"><%= t("fcrepo_admin.datastream.tabs.content") %></a></li>
