@@ -1,32 +1,0 @@
-<% if object_has_permissions? %>
-
-  <h4><%= t("fcrepo_admin.object.permissions.direct") %></h4>
-  <%= render :partial => 'permissions', :locals => {:permissions => object.permissions} %>
-
-  <h4><%= t("fcrepo_admin.object.permissions.inherited") %></h4>
-  <% unless admin_policy_enforcement_enabled? %>
-    <p class="alert">
-	  <%= t("fcrepo_admin.object.apo.enforcement_disabled") %>.
-	</p>
-  <% end %>
-  <% if object_model_belongs_to_apo? %>
-    <p>
-	  <%= t("fcrepo_admin.object.apo.governed_by") %>: 
-	  <% if object_has_admin_policy? %>
-	    <%= link_to object_admin_policy.pid, fcrepo_admin.object_path(object_admin_policy) %>
-	  <% else %>
-	    <span class="label"><%= t("fcrepo_admin.object.apo.not_assigned") %></span>
-	  <% end %>
-	</p>
-	<% if object_has_inherited_permissions? %>
-	  <%= render :partial => 'permissions', :locals => {:permissions => object_inherited_permissions} %>
-	<% end %>
-  <% else %>
-    <p class="alert alert-info">
-	  <%= t("fcrepo_admin.object.apo.relationship_undefined") %>: <%= object_type %>.
-	</p>
-  <% end %>
-
-<% else %>
-  <%= t("fcrepo_admin.object.permissions.not_supported") %>: <%= object_type %>.
-<% end %>
