@@ -1,0 +1,1 @@
+<%= render :partial => 'permissions', :locals => {:object => @object} %>
