@@ -1,22 +1,1 @@
-<div class="tabbable">
-  <ul class="nav nav-tabs">
-    <li class="active"><a href="#tab-datastreams" data-toggle="tab"><%= t("fcrepo_admin.object.tabs.datastreams") %></a></li>
-    <li><a href="#tab-properties" data-toggle="tab"><%= t("fcrepo_admin.object.tabs.properties") %></a></li>
-    <li><a href="#tab-permissions" data-toggle="tab"><%= t("fcrepo_admin.object.tabs.permissions") %></a></li>
-    <li><a href="#tab-associations" data-toggle="tab"><%= t("fcrepo_admin.object.tabs.associations") %></a></li>
-  </ul>
-  <div class="tab-content">
-    <div class="tab-pane active" id="tab-datastreams">
-	  <%= render :partial => 'datastreams', :locals => {:datastreams => @object.datastreams} %>
-    </div>
-    <div class="tab-pane" id="tab-properties">
-	  <%= render 'properties' %>
-    </div>
-    <div class="tab-pane" id="tab-permissions">
-	  <%= render :partial => 'direct_and_inherited_permissions', :locals => {:object => @object} %>
-    </div> <!-- /tab-permissions -->
-	<div class="tab-pane" id="tab-associations">
-	  <%= render :partial => 'associations', :locals => {:object => @object} %>
-	</div>
-  </div>
-</div>
+<%= render :partial => 'datastreams', :locals => {:object => @object} %>
