@@ -1,6 +1,5 @@
 <% content_for :main do %>
   <h1><%= object_title %></h1>
-  <h3><%= t("fcrepo_admin.datastream.title") %>: <%= @datastream.dsid %></h3>
   <%= yield %>
 <% end %>
 <% content_for :sidebar do %>
