@@ -2,9 +2,13 @@ FcrepoAdmin::Engine.routes.draw do
 
   scope :module => "fcrepo_admin" do
     resources :objects, :only => :show do
-      resources :associations, :only => :show
-      get 'audit_trail', :on => :member
-      resources :datastreams, :only => [:show, :edit, :update] do
+      member do
+        get 'audit_trail'
+        get 'properties'
+        get 'permissions'
+      end
+      resources :associations, :only => [:index, :show]
+      resources :datastreams, :only => [:index, :show, :edit, :update] do
         member do
           get 'upload'
           get 'download'
