@@ -4,7 +4,7 @@ require 'hydra/head'
 
 module FcrepoAdmin
   autoload :SolrDocumentExtension, 'fcrepo_admin/solr_document_extension'
-  autoload :DatastreamAbility, 'fcrepo_admin/datastream_ability'
+  autoload :Ability, 'fcrepo_admin/ability'
   module Helpers
     autoload :BlacklightHelperBehavior, 'fcrepo_admin/helpers/blacklight_helper_behavior'
     autoload :ObjectsHelperBehavior, 'fcrepo_admin/helpers/objects_helper_behavior'
